# market-data-reliability-platform

./: .env.example  .gitignore  CONTEXT.md  EVAL_GUIDE.md  Makefile  README.md  SHOWCASE.md  SUBMISSION.md  docker-compose.cloud.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/alertmanager/: alertmanager.yml
config/grafana/dashboards/: pipeline-overview.json
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
config/prometheus/: prometheus.yml
config/prometheus/alerts/: infrastructure.yml  pipeline.yml
config/redpanda/: redpanda.yaml
demo/: api.py  dashboard.html
demo.venv/: pyvenv.cfg
demo.venv/Scripts/: activate  activate.bat
docs/: snowflake-pat-rotation.md
docs/architecture/: data-flow.md  system-overview.md
docs/runbooks/: dlq-replay.md  provider-outage.md
infra/: deploy-ec2.sh  ec2-bootstrap.sh  generate-eval-package.sh
infra/snowflake/: 001_database_and_warehouses.sql  002_schemas.sql  003_tables.sql  004_roles_and_grants.sql  005_stages_and_pipes.sql  006_views.sql
infra/terraform/: README.md
infra/terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eval-user/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
libs/common/: pyproject.toml
libs/common/src/mdrp_common/: __init__.py  kafka_client.py  logging.py  metrics.py  models.py  settings.py  storage.py
services/bronze-writer/: Dockerfile  README.md  pyproject.toml
services/bronze-writer/src/bronze_writer/: buffer.py  main.py  settings.py  writer.py
services/gold-loader/: Dockerfile  README.md  pyproject.toml
services/gold-loader/src/gold_loader/: __init__.py  loader.py  main.py  settings.py  snapshot_assembler.py  snowflake_client.py
services/normalization-service/: Dockerfile  README.md  pyproject.toml
services/normalization-service/src/normalization_service/: __init__.py  instrument_mapper.py  main.py  normalizer.py  settings.py  tenor_mapper.py
services/ops-api/: Dockerfile  README.md  pyproject.toml
services/ops-api/src/ops_api/: __init__.py  alerting.py  dependencies.py  main.py  settings.py
services/ops-api/src/ops_api/routers/: __init__.py  alerts.py  curves.py  dlq.py  health.py  replay.py
services/provider-emulator/: Dockerfile  README.md  pyproject.toml
services/provider-emulator/src/provider_emulator/: databento_adapter.py  emulator.py  fault_injector.py  main.py  market_data_generator.py  settings.py
services/redis-writer/: Dockerfile  README.md  pyproject.toml
services/redis-writer/src/redis_writer/: __init__.py  curve_store.py  main.py  settings.py  writer.py
services/replay-engine/: Dockerfile  README.md  docker-healthcheck.sh  pyproject.toml
services/replay-engine/src/replay_engine/: __init__.py  bronze_replayer.py  databento_replayer.py  dlq_replayer.py  engine.py  job_store.py  main.py  settings.py
services/silver-loader/: Dockerfile  README.md  pyproject.toml
services/silver-loader/src/silver_loader/: __init__.py  loader.py  main.py  settings.py  snowflake_client.py
services/validation-service/: Dockerfile  README.md  pyproject.toml
services/validation-service/src/validation_service/: deduplicator.py  main.py  quality_scorer.py  settings.py  validator.py
tests/: conftest.py  pytest.ini
tests/chaos/: test_chaos_scenarios.py  test_fault_injection.py
tests/integration/: test_pipeline_integration.py  test_pipeline_smoke.py
tests/unit/: test_bronze_buffer.py  test_bronze_storage.py  test_fault_injector.py  test_instrument_mapper.py  test_models.py  test_quality_score.py  test_quality_scorer.py  test_snapshot_assembler.py  test_tenor_mapper.py  test_validator.py
