[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdrp-common"
version = "0.1.0"
description = "Shared models, Kafka client, metrics, and logging for the Market Data Reliability Platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "confluent-kafka>=2.4,<3",
    "prometheus-client>=0.20,<1",
    "structlog>=24.1,<25",
    "boto3>=1.34,<2",
    "pyarrow>=16.0,<17",
    "pandas>=2.2,<3",
    "redis>=5.0,<6",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<2",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mdrp_common"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
