[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bronze-writer"
version = "0.1.0"
description = "Writes raw market events to MinIO/S3 Bronze layer as Parquet files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Shared platform library — installed from the monorepo path
    "mdrp-common @ file:///${PROJECT_ROOT}/../../libs/common",
    # Kafka client
    "confluent-kafka>=2.3.0",
    # S3 / Parquet (pulled in transitively via mdrp-common, but explicit is safer)
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    # Metrics
    "prometheus-client>=0.19.0",
    # Structured logging
    "structlog>=24.1.0",
    # Settings / validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
bronze-writer = "bronze_writer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bronze_writer"]

[tool.hatch.metadata]
allow-direct-references = true

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["bronze_writer", "mdrp_common"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
