[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ops-api"
version = "0.1.0"
description = "Market Data Reliability Platform — Ops API service"
requires-python = ">=3.11"
dependencies = [
    "mdrp-common",
    "replay-engine",                    # for JobStore
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "confluent-kafka>=2.3.0",
    "boto3>=1.34.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
ops-api = "ops_api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ops_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
