[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-writer"
version = "0.1.0"
description = "Redis writer service — persists canonical CurveEvents to Redis"
requires-python = ">=3.11"
dependencies = [
    "mdrp-common",
    "redis>=5.0,<6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "confluent-kafka>=2.4,<3",
    "prometheus-client>=0.20,<1",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=7.4.0",
]

[project.scripts]
redis-writer = "redis_writer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/redis_writer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
