[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replay-engine"
version = "0.1.0"
description = "Market Data Reliability Platform — Replay Engine service"
requires-python = ">=3.11"
dependencies = [
    "mdrp-common",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
databento = [
    "databento>=0.34.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
replay-engine = "replay_engine.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/replay_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
