[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replay-engine"
version = "0.1.0"
description = "Market Data Reliability Platform — Replay Engine service"
requires-python = ">=3.11"
dependencies = [
    "mdrp-common",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "pyarrow>=14.0.0",
    "pandas>=2.1.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
databento = [
    "databento>=0.34.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
replay-engine = "replay_engine.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/replay_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["replay_engine", "mdrp_common"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
